# auv_ftc_ws

./: README.md
src/auv_bringup/: CMakeLists.txt  package.xml
src/auv_bringup/config/: plot_topics.txt
src/auv_bringup/launch/: full_simulation.launch.py  full_simulation_with_dashboard.launch.py  reproduce_paper.launch.py
src/auv_control/: CMakeLists.txt  package.xml
src/auv_control/config/: controller.yaml  controller_rexrov.yaml
src/auv_control/include/auv_control/: auv_params.hpp  thrust_allocator.hpp  ts_fuzzy.hpp
src/auv_control/launch/: controller.launch.py
src/auv_control/scripts/: inject_fault_cli.py  plot_from_bag.py  scenario_runner.py
src/auv_control/src/: auv_controller_node.cpp  reference_generator_node.cpp  test_allocator.cpp  thrust_allocator.cpp  ts_fuzzy.cpp
src/auv_control/srv/: InjectFault.srv
src/auv_dashboard/: CMakeLists.txt  package.xml
src/auv_dashboard/launch/: dashboard.launch.py
src/auv_dashboard/web/: dashboard.html
src/auv_description/: CMakeLists.txt  package.xml
src/auv_description/launch/: display.launch.py
src/auv_description/rviz/: auv.rviz
src/auv_description/urdf/: auv.urdf.xacro  rexrov.urdf.xacro
src/auv_gazebo/: CMakeLists.txt  package.xml
src/auv_gazebo/launch/: gazebo.launch.py
src/auv_gazebo/worlds/: underwater.world
