<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_dashboard</name>
  <version>0.1.0</version>
  <description>
    Web-based live dashboard for the AUV fault-tolerant control stack.
    Serves an HTML/JS page that subscribes to the controller diagnostic
    topics through rosbridge_websocket and plots them in real time.
  </description>
  <maintainer email="user@example.com">AUV FTC Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>auv_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
