<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_description</name>
  <version>0.1.0</version>
  <description>
    URDF / xacro description of a torpedo-shaped AUV with redundant propulsion
    (2 horizontal thrusters + 2 vertical thrusters/rudders), matching the
    propulsion layout in Zhang et al., Sensors 2024, 24, 3029.
  </description>
  <maintainer email="user@example.com">AUV FTC Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
